# Stardust

./: README.md
contracts/: README.md  StarCoin  Stardust.sol  StardustPilot.sol  Trigonometry.sol  Weather.sol
contracts/interfaces/: IPilot.sol  IStarCoin.sol  IStardust.sol
contracts/test/: TestDust.sol
godot/: Blockspace.gd  Blockspace.tscn  CCIP.gdns  CargoInterface.gd  CargoInterface.tscn  ConfigMenu.gd  ConfigMenu.tscn  Global.gd  Metamask.gd  MusicPlayer.gd  MusicPlayer.tscn  Overlay.gd  Player.gd  README.md  RayCast.gd  RouteLogo.gd  ShipInterior.tscn  ShipView.tscn  SimpleInterface.gd  SimpleInterface.tscn  Space.tscn  Sphere.gd  TitleShip.gd  convert_util.gd  export_presets.cfg  project.godot  stardust_rust_library.gdnlib
godot/rust/: Cargo.toml  Stardust.json  lib.rs
godot/ships/: Glass.material  Mat_Main.material  README.md  TestShip.gd  TestShip.glb  TestShip.tscn
